--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "main.py",
-      "use": "@vercel/python"
-    }
-  ],
+  "build": {
+    "src": "main.py",
+    "use": "@vercel/python"
+  },
   "routes": [
     {
       "src": "/(.*)",
