--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "build": {
-    "src": "main.py",
+    "src": "api/main.py",
     "use": "@vercel/python"
   },
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "main.py"
+      "dest": "api/main.py"
     }
   ]
 }
