--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,4 @@
 {
-  "build": {
-    "src": "api/main.py",
-    "use": "@vercel/python"
-  },
-  "routes": [
-    {
-      "src": "/src/(.*)",
-      "dest": "api/main.py"
-    }
-  ]
+  "builds": [{ "src": "api/main.py", "use": "@vercel/python" }],
+  "routes": [{ "src": "/(.*)", "dest": "api/main.py" }]
 }
