--- a/requirements.txt
+++ b/requirements.txt
@@ -57,7 +57,7 @@ pytz==2023.3
 PyYAML==6.0
 readme-renderer==37.3
 realtime==1.0.0
-requests==2.30.0
+requests==2.31.0
 requests-toolbelt==1.0.0
 rfc3986==1.5.0
 semver==2.13.0
@@ -69,11 +69,12 @@ storage3==0.5.2
 StrEnum==0.4.10
 supabase==1.0.3
 supafunc==0.2.2
+tomli==2.0.1
 tomlkit==0.11.8
 tqdm==4.65.0
 twilio==8.2.1
 twine==3.8.0
-typing_extensions==4.5.0
+typing_extensions==4.6.0
 urllib3==2.0.2
 uvicorn==0.22.0
 uvloop==0.17.0
