--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^1.0.0"
 python-multipart = "^0.0.6"
 supabase = "^1.0.3"
 twilio = "^8.2.1"
+pandas = "^2.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
