--- a/requirements.txt
+++ b/requirements.txt
@@ -34,13 +34,15 @@ mccabe==0.7.0
 more-itertools==9.1.0
 multidict==6.0.4
 mypy-extensions==1.0.0
+numpy==1.24.3
 packaging==23.1
+pandas==2.0.1
 pathspec==0.11.1
 pkginfo==1.9.6
 platformdirs==3.5.1
 postgrest==0.10.6
 pycodestyle==2.10.0
-pydantic==1.10.7
+pydantic==1.10.8
 pyflakes==3.0.1
 Pygments==2.15.1
 PyJWT==2.7.0
@@ -70,7 +72,8 @@ tomlkit==0.11.8
 tqdm==4.65.0
 twilio==8.2.1
 twine==3.8.0
-typing_extensions==4.6.0
+typing_extensions==4.6.1
+tzdata==2023.3
 urllib3==2.0.2
 uvicorn==0.22.0
 uvloop==0.17.0
