feat: add grade, section, guardian in create user

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ SUPABASE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZ
 
 TWILIO_ACCOUNT_SID="ACd637cd1783e275676ed8a624b876da8d"
 TWILIO_AUTH_TOKEN="a4dece64d589713ce22ce5f48c5ad05c"
-TWILIO_PHONE="09706643226"
+TWILIO_PHONE="+13159158763"
