--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-multipart = "^0.0.6"
 supabase = "^1.0.3"
 twilio = "^8.2.1"
 pandas = "^2.0.1"
+vonage = "^3.6.0"
 
 
 [tool.poetry.group.dev.dependencies]
