--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,13 @@ attrs==23.1.0
 black==23.3.0
 bleach==6.0.0
 certifi==2023.5.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
 click-log==0.4.0
 colorama==0.4.6
+cryptography==40.0.2
+Deprecated==1.2.14
 deprecation==2.1.0
 docutils==0.20.1
 dotty-dict==1.3.1
@@ -42,6 +45,7 @@ pkginfo==1.9.6
 platformdirs==3.5.1
 postgrest==0.10.6
 pycodestyle==2.10.0
+pycparser==2.21
 pydantic==1.10.8
 pyflakes==3.0.1
 Pygments==2.15.1
@@ -76,8 +80,11 @@ tzdata==2023.3
 urllib3==2.0.2
 uvicorn==0.22.0
 uvloop==0.17.0
+vonage==3.6.0
+vonage-jwt==1.0.0
 watchfiles==0.19.0
 webencodings==0.5.1
 websockets==10.4
+wrapt==1.15.0
 yarl==1.9.2
 zipp==3.15.0
